--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"type": "module",
 	"scripts": {
-		"start": "docker compose build && docker compose up -d"
+		"prod": "docker compose build && docker compose up -d",
+		"test": "docker compose -p leaderboard-test -f docker-compose.test.yml up -d"
 	},
 	"dependencies": {
 		"express": "^5.2.1",
