--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,13 @@ services:
     depends_on:
       - db
     environment:
+      SSL: true
       DB_HOST: db
       DB_PORT: 5432
       DB_USER: postgres
       DB_PASSWORD: postgres
       DB_NAME: leaderboards
-      API_PORT: ${API_PORT}
+      API_PORT: ${API_PORT:-443}
       STEAM_API_KEY: ${STEAM_API_KEY}
       STEAM_APP_ID: ${STEAM_APP_ID}
       JWT_SECRET: ${JWT_SECRET}
