--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       STEAM_APP_ID: ${STEAM_APP_ID}
       JWT_SECRET: ${JWT_SECRET}
       ADMIN_API_KEY: ${ADMIN_API_KEY}
+      REQUIRED_CLIENT_VERSION: ${REQUIRED_CLIENT_VERSION}
     ports:
       - "443:443"
 
